bison.output
Nonterminals useless in grammar

   commenti


Terminals unused in grammar

   COMMENT


Regole inutili nella grammatica

   66 commenti: COMMENT
   67         | COMMENT string


Stato 56 2 conflitti shift/riduzione
Stato 76 2 conflitti shift/riduzione


Grammatica

    0 $accept: main $end

    1 main: definition events commands elenco_stati

    2 definition: VAR LBRACE RBRACE
    3           | VAR LBRACE elenco_ass RBRACE

    4 elenco_ass: assegnazione SEMI
    5           | elenco_ass assegnazione SEMI

    6 assegnazione: TYPE string ASSIGN string
    7             | TYPE string ASSIGN term

    8 string: ALPHA

    9 operazioni: string ASSIGN string OPERATORE string
   10           | string ASSIGN string OPERATORE term
   11           | string ASSIGN term OPERATORE string
   12           | string ASSIGN term OPERATORE term
   13           | OPERATORE LPAREN string RPAREN
   14           | OPERATORE LPAREN term COMMA string RPAREN
   15           | PRINT LPAREN string RPAREN
   16           | PRINT

   17 term: NUMBER

   18 events: EVENT LBRACE elenco_ev_com RBRACE

   19 elenco_ev_com: string SEMI
   20              | elenco_ev_com string SEMI

   21 elenco_stati: state
   22             | elenco_stati state

   23 state: STATE string LBRACE actions elenchi RBRACE
   24      | STATE string LBRACE actions elenco_cond elenchi RBRACE
   25      | STATE string LBRACE actions cicli RBRACE
   26      | STATE string LBRACE actions cicli elenco_cond RBRACE
   27      | STATE string LBRACE actions cicli elenchi RBRACE

   28 elenchi: elenco_operazioni
   29        | elenco_cambio
   30        | elenchi elenco_cambio
   31        | elenchi elenco_operazioni

   32 elenco_operazioni: operazioni SEMI
   33                  | elenco_operazioni SEMI operazioni

   34 actions: ACTION LBRACE RBRACE SEMI
   35        | ACTION LBRACE elenco_actions RBRACE SEMI

   36 commands: COMMAND LBRACE elenco_ev_com RBRACE

   37 elenco_actions: operazioni
   38               | elenco_actions COMMA operazioni

   39 cambiostato: string CHANGESTATE string SEMI
   40            | CHANGESTATE string SEMI

   41 elenco_cambio: cambiostato
   42              | elenco_cambio cambiostato

   43 cicli: FOR LPAREN assegnazione COMMA string CMP term COMMA operazioni RPAREN LBRACE elenco_cond RBRACE
   44      | FOR LPAREN assegnazione COMMA term CMP string COMMA operazioni RPAREN LBRACE elenco_cond RBRACE
   45      | FOR LPAREN assegnazione COMMA string CMP string COMMA operazioni RPAREN LBRACE elenco_cond RBRACE
   46      | FOR LPAREN assegnazione COMMA string CMP term COMMA operazioni RPAREN LBRACE elenchi RBRACE
   47      | FOR LPAREN assegnazione COMMA term CMP string COMMA operazioni RPAREN LBRACE elenchi RBRACE
   48      | FOR LPAREN assegnazione COMMA string CMP string COMMA operazioni RPAREN LBRACE elenchi RBRACE
   49      | WHILE LPAREN term CMP term RPAREN LBRACE elenco_cond RBRACE
   50      | WHILE LPAREN string CMP term RPAREN LBRACE elenco_cond RBRACE
   51      | WHILE LPAREN term CMP string RPAREN LBRACE elenco_cond RBRACE
   52      | WHILE LPAREN string CMP string RPAREN LBRACE elenco_cond RBRACE
   53      | WHILE LPAREN term CMP term RPAREN LBRACE elenchi RBRACE
   54      | WHILE LPAREN string CMP term RPAREN LBRACE elenchi RBRACE
   55      | WHILE LPAREN term CMP string RPAREN LBRACE elenchi RBRACE
   56      | WHILE LPAREN string CMP string RPAREN LBRACE elenchi RBRACE

   57 metodo: IF
   58       | ELIF

   59 cond: metodo LPAREN term CMP term RPAREN LBRACE elenchi RBRACE
   60     | metodo LPAREN term CMP string RPAREN LBRACE elenchi RBRACE
   61     | metodo LPAREN string CMP term RPAREN LBRACE elenchi RBRACE
   62     | metodo LPAREN string CMP string RPAREN LBRACE elenchi RBRACE
   63     | ELSE LBRACE elenchi RBRACE

   64 elenco_cond: cond
   65            | elenco_cond cond


Simboli terminali e regole in cui appaiono

$end (0) 0
error (256)
NUMBER <fn> (258) 17
TYPE <fn> (259) 6 7
SEMI (260) 4 5 19 20 32 33 34 35 39 40
ALPHA <c> (261) 8
ASSIGN (262) 6 7 9 10 11 12
VAR (263) 2 3
LBRACE (264) 2 3 18 23 24 25 26 27 34 35 36 43 44 45 46 47 48 49 50
    51 52 53 54 55 56 59 60 61 62 63
RBRACE (265) 2 3 18 23 24 25 26 27 34 35 36 43 44 45 46 47 48 49 50
    51 52 53 54 55 56 59 60 61 62 63
LPAREN (266) 13 14 15 43 44 45 46 47 48 49 50 51 52 53 54 55 56 59
    60 61 62
RPAREN (267) 13 14 15 43 44 45 46 47 48 49 50 51 52 53 54 55 56 59
    60 61 62
EVENT (268) 18
ACTION (269) 34 35
COMMAND (270) 36
STATE (271) 23 24 25 26 27
COMMA (272) 14 38 43 44 45 46 47 48
CHANGESTATE (273) 39 40
COMMENT (274)
IF (275) 57
ELSE (276) 63
ELIF (277) 58
CMP <fn> (278) 43 44 45 46 47 48 49 50 51 52 53 54 55 56 59 60 61 62
OPERATORE <fn> (279) 9 10 11 12 13 14
WHILE (280) 49 50 51 52 53 54 55 56
FOR (281) 43 44 45 46 47 48
PRINT <fn> (282) 15 16


Simboli nonterminali e regole in cui appaiono

$accept (28)
    nel primo membro: 0
main (29)
    nel primo membro: 1, nel secondo membro: 0
definition <as> (30)
    nel primo membro: 2 3, nel secondo membro: 1
elenco_ass <as> (31)
    nel primo membro: 4 5, nel secondo membro: 3 5
assegnazione <as> (32)
    nel primo membro: 6 7, nel secondo membro: 4 5 43 44 45 46 47 48
string <c> (33)
    nel primo membro: 8, nel secondo membro: 6 7 9 10 11 12 13 14 15
    19 20 23 24 25 26 27 39 40 43 44 45 46 47 48 50 51 52 54 55 56
    60 61 62
operazioni <op> (34)
    nel primo membro: 9 10 11 12 13 14 15 16, nel secondo membro: 32
    33 37 38 43 44 45 46 47 48
term <fn> (35)
    nel primo membro: 17, nel secondo membro: 7 10 11 12 14 43 44 46
    47 49 50 51 53 54 55 59 60 61
events <even> (36)
    nel primo membro: 18, nel secondo membro: 1
elenco_ev_com <even> (37)
    nel primo membro: 19 20, nel secondo membro: 18 20 36
elenco_stati <elen_stat> (38)
    nel primo membro: 21 22, nel secondo membro: 1 22
state <stat> (39)
    nel primo membro: 23 24 25 26 27, nel secondo membro: 21 22
elenchi <elen> (40)
    nel primo membro: 28 29 30 31, nel secondo membro: 23 24 27 30
    31 46 47 48 53 54 55 56 59 60 61 62 63
elenco_operazioni <azione> (41)
    nel primo membro: 32 33, nel secondo membro: 28 31 33
actions <azione> (42)
    nel primo membro: 34 35, nel secondo membro: 23 24 25 26 27
commands <even> (43)
    nel primo membro: 36, nel secondo membro: 1
elenco_actions <azione> (44)
    nel primo membro: 37 38, nel secondo membro: 35 38
cambiostato <camb_stat> (45)
    nel primo membro: 39 40, nel secondo membro: 41 42
elenco_cambio <camb_stat> (46)
    nel primo membro: 41 42, nel secondo membro: 29 30 42
cicli <cic> (47)
    nel primo membro: 43 44 45 46 47 48 49 50 51 52 53 54 55 56, nel secondo membro:
    25 26 27
metodo (48)
    nel primo membro: 57 58, nel secondo membro: 59 60 61 62
cond <con> (49)
    nel primo membro: 59 60 61 62 63, nel secondo membro: 64 65
elenco_cond <elen_con> (50)
    nel primo membro: 64 65, nel secondo membro: 24 26 43 44 45 49
    50 51 52 65


Stato 0

    0 $accept: . main $end

    VAR  shift e prosecuzione allo stato 1

    main        prosecuzione allo stato 2
    definition  prosecuzione allo stato 3


Stato 1

    2 definition: VAR . LBRACE RBRACE
    3           | VAR . LBRACE elenco_ass RBRACE

    LBRACE  shift e prosecuzione allo stato 4


Stato 2

    0 $accept: main . $end

    $end  shift e prosecuzione allo stato 5


Stato 3

    1 main: definition . events commands elenco_stati

    EVENT  shift e prosecuzione allo stato 6

    events  prosecuzione allo stato 7


Stato 4

    2 definition: VAR LBRACE . RBRACE
    3           | VAR LBRACE . elenco_ass RBRACE

    TYPE    shift e prosecuzione allo stato 8
    RBRACE  shift e prosecuzione allo stato 9

    elenco_ass    prosecuzione allo stato 10
    assegnazione  prosecuzione allo stato 11


Stato 5

    0 $accept: main $end .

    $default  accetta


Stato 6

   18 events: EVENT . LBRACE elenco_ev_com RBRACE

    LBRACE  shift e prosecuzione allo stato 12


Stato 7

    1 main: definition events . commands elenco_stati

    COMMAND  shift e prosecuzione allo stato 13

    commands  prosecuzione allo stato 14


Stato 8

    6 assegnazione: TYPE . string ASSIGN string
    7             | TYPE . string ASSIGN term

    ALPHA  shift e prosecuzione allo stato 15

    string  prosecuzione allo stato 16


Stato 9

    2 definition: VAR LBRACE RBRACE .

    $default  riduzione con la regola 2 (definition)


Stato 10

    3 definition: VAR LBRACE elenco_ass . RBRACE
    5 elenco_ass: elenco_ass . assegnazione SEMI

    TYPE    shift e prosecuzione allo stato 8
    RBRACE  shift e prosecuzione allo stato 17

    assegnazione  prosecuzione allo stato 18


Stato 11

    4 elenco_ass: assegnazione . SEMI

    SEMI  shift e prosecuzione allo stato 19


Stato 12

   18 events: EVENT LBRACE . elenco_ev_com RBRACE

    ALPHA  shift e prosecuzione allo stato 15

    string         prosecuzione allo stato 20
    elenco_ev_com  prosecuzione allo stato 21


Stato 13

   36 commands: COMMAND . LBRACE elenco_ev_com RBRACE

    LBRACE  shift e prosecuzione allo stato 22


Stato 14

    1 main: definition events commands . elenco_stati

    STATE  shift e prosecuzione allo stato 23

    elenco_stati  prosecuzione allo stato 24
    state         prosecuzione allo stato 25


Stato 15

    8 string: ALPHA .

    $default  riduzione con la regola 8 (string)


Stato 16

    6 assegnazione: TYPE string . ASSIGN string
    7             | TYPE string . ASSIGN term

    ASSIGN  shift e prosecuzione allo stato 26


Stato 17

    3 definition: VAR LBRACE elenco_ass RBRACE .

    $default  riduzione con la regola 3 (definition)


Stato 18

    5 elenco_ass: elenco_ass assegnazione . SEMI

    SEMI  shift e prosecuzione allo stato 27


Stato 19

    4 elenco_ass: assegnazione SEMI .

    $default  riduzione con la regola 4 (elenco_ass)


Stato 20

   19 elenco_ev_com: string . SEMI

    SEMI  shift e prosecuzione allo stato 28


Stato 21

   18 events: EVENT LBRACE elenco_ev_com . RBRACE
   20 elenco_ev_com: elenco_ev_com . string SEMI

    ALPHA   shift e prosecuzione allo stato 15
    RBRACE  shift e prosecuzione allo stato 29

    string  prosecuzione allo stato 30


Stato 22

   36 commands: COMMAND LBRACE . elenco_ev_com RBRACE

    ALPHA  shift e prosecuzione allo stato 15

    string         prosecuzione allo stato 20
    elenco_ev_com  prosecuzione allo stato 31


Stato 23

   23 state: STATE . string LBRACE actions elenchi RBRACE
   24      | STATE . string LBRACE actions elenco_cond elenchi RBRACE
   25      | STATE . string LBRACE actions cicli RBRACE
   26      | STATE . string LBRACE actions cicli elenco_cond RBRACE
   27      | STATE . string LBRACE actions cicli elenchi RBRACE

    ALPHA  shift e prosecuzione allo stato 15

    string  prosecuzione allo stato 32


Stato 24

    1 main: definition events commands elenco_stati .
   22 elenco_stati: elenco_stati . state

    STATE  shift e prosecuzione allo stato 23

    $default  riduzione con la regola 1 (main)

    state  prosecuzione allo stato 33


Stato 25

   21 elenco_stati: state .

    $default  riduzione con la regola 21 (elenco_stati)


Stato 26

    6 assegnazione: TYPE string ASSIGN . string
    7             | TYPE string ASSIGN . term

    NUMBER  shift e prosecuzione allo stato 34
    ALPHA   shift e prosecuzione allo stato 15

    string  prosecuzione allo stato 35
    term    prosecuzione allo stato 36


Stato 27

    5 elenco_ass: elenco_ass assegnazione SEMI .

    $default  riduzione con la regola 5 (elenco_ass)


Stato 28

   19 elenco_ev_com: string SEMI .

    $default  riduzione con la regola 19 (elenco_ev_com)


Stato 29

   18 events: EVENT LBRACE elenco_ev_com RBRACE .

    $default  riduzione con la regola 18 (events)


Stato 30

   20 elenco_ev_com: elenco_ev_com string . SEMI

    SEMI  shift e prosecuzione allo stato 37


Stato 31

   20 elenco_ev_com: elenco_ev_com . string SEMI
   36 commands: COMMAND LBRACE elenco_ev_com . RBRACE

    ALPHA   shift e prosecuzione allo stato 15
    RBRACE  shift e prosecuzione allo stato 38

    string  prosecuzione allo stato 30


Stato 32

   23 state: STATE string . LBRACE actions elenchi RBRACE
   24      | STATE string . LBRACE actions elenco_cond elenchi RBRACE
   25      | STATE string . LBRACE actions cicli RBRACE
   26      | STATE string . LBRACE actions cicli elenco_cond RBRACE
   27      | STATE string . LBRACE actions cicli elenchi RBRACE

    LBRACE  shift e prosecuzione allo stato 39


Stato 33

   22 elenco_stati: elenco_stati state .

    $default  riduzione con la regola 22 (elenco_stati)


Stato 34

   17 term: NUMBER .

    $default  riduzione con la regola 17 (term)


Stato 35

    6 assegnazione: TYPE string ASSIGN string .

    $default  riduzione con la regola 6 (assegnazione)


Stato 36

    7 assegnazione: TYPE string ASSIGN term .

    $default  riduzione con la regola 7 (assegnazione)


Stato 37

   20 elenco_ev_com: elenco_ev_com string SEMI .

    $default  riduzione con la regola 20 (elenco_ev_com)


Stato 38

   36 commands: COMMAND LBRACE elenco_ev_com RBRACE .

    $default  riduzione con la regola 36 (commands)


Stato 39

   23 state: STATE string LBRACE . actions elenchi RBRACE
   24      | STATE string LBRACE . actions elenco_cond elenchi RBRACE
   25      | STATE string LBRACE . actions cicli RBRACE
   26      | STATE string LBRACE . actions cicli elenco_cond RBRACE
   27      | STATE string LBRACE . actions cicli elenchi RBRACE

    ACTION  shift e prosecuzione allo stato 40

    actions  prosecuzione allo stato 41


Stato 40

   34 actions: ACTION . LBRACE RBRACE SEMI
   35        | ACTION . LBRACE elenco_actions RBRACE SEMI

    LBRACE  shift e prosecuzione allo stato 42


Stato 41

   23 state: STATE string LBRACE actions . elenchi RBRACE
   24      | STATE string LBRACE actions . elenco_cond elenchi RBRACE
   25      | STATE string LBRACE actions . cicli RBRACE
   26      | STATE string LBRACE actions . cicli elenco_cond RBRACE
   27      | STATE string LBRACE actions . cicli elenchi RBRACE

    ALPHA        shift e prosecuzione allo stato 15
    CHANGESTATE  shift e prosecuzione allo stato 43
    IF           shift e prosecuzione allo stato 44
    ELSE         shift e prosecuzione allo stato 45
    ELIF         shift e prosecuzione allo stato 46
    OPERATORE    shift e prosecuzione allo stato 47
    WHILE        shift e prosecuzione allo stato 48
    FOR          shift e prosecuzione allo stato 49
    PRINT        shift e prosecuzione allo stato 50

    string             prosecuzione allo stato 51
    operazioni         prosecuzione allo stato 52
    elenchi            prosecuzione allo stato 53
    elenco_operazioni  prosecuzione allo stato 54
    cambiostato        prosecuzione allo stato 55
    elenco_cambio      prosecuzione allo stato 56
    cicli              prosecuzione allo stato 57
    metodo             prosecuzione allo stato 58
    cond               prosecuzione allo stato 59
    elenco_cond        prosecuzione allo stato 60


Stato 42

   34 actions: ACTION LBRACE . RBRACE SEMI
   35        | ACTION LBRACE . elenco_actions RBRACE SEMI

    ALPHA      shift e prosecuzione allo stato 15
    RBRACE     shift e prosecuzione allo stato 61
    OPERATORE  shift e prosecuzione allo stato 47
    PRINT      shift e prosecuzione allo stato 50

    string          prosecuzione allo stato 62
    operazioni      prosecuzione allo stato 63
    elenco_actions  prosecuzione allo stato 64


Stato 43

   40 cambiostato: CHANGESTATE . string SEMI

    ALPHA  shift e prosecuzione allo stato 15

    string  prosecuzione allo stato 65


Stato 44

   57 metodo: IF .

    $default  riduzione con la regola 57 (metodo)


Stato 45

   63 cond: ELSE . LBRACE elenchi RBRACE

    LBRACE  shift e prosecuzione allo stato 66


Stato 46

   58 metodo: ELIF .

    $default  riduzione con la regola 58 (metodo)


Stato 47

   13 operazioni: OPERATORE . LPAREN string RPAREN
   14           | OPERATORE . LPAREN term COMMA string RPAREN

    LPAREN  shift e prosecuzione allo stato 67


Stato 48

   49 cicli: WHILE . LPAREN term CMP term RPAREN LBRACE elenco_cond RBRACE
   50      | WHILE . LPAREN string CMP term RPAREN LBRACE elenco_cond RBRACE
   51      | WHILE . LPAREN term CMP string RPAREN LBRACE elenco_cond RBRACE
   52      | WHILE . LPAREN string CMP string RPAREN LBRACE elenco_cond RBRACE
   53      | WHILE . LPAREN term CMP term RPAREN LBRACE elenchi RBRACE
   54      | WHILE . LPAREN string CMP term RPAREN LBRACE elenchi RBRACE
   55      | WHILE . LPAREN term CMP string RPAREN LBRACE elenchi RBRACE
   56      | WHILE . LPAREN string CMP string RPAREN LBRACE elenchi RBRACE

    LPAREN  shift e prosecuzione allo stato 68


Stato 49

   43 cicli: FOR . LPAREN assegnazione COMMA string CMP term COMMA operazioni RPAREN LBRACE elenco_cond RBRACE
   44      | FOR . LPAREN assegnazione COMMA term CMP string COMMA operazioni RPAREN LBRACE elenco_cond RBRACE
   45      | FOR . LPAREN assegnazione COMMA string CMP string COMMA operazioni RPAREN LBRACE elenco_cond RBRACE
   46      | FOR . LPAREN assegnazione COMMA string CMP term COMMA operazioni RPAREN LBRACE elenchi RBRACE
   47      | FOR . LPAREN assegnazione COMMA term CMP string COMMA operazioni RPAREN LBRACE elenchi RBRACE
   48      | FOR . LPAREN assegnazione COMMA string CMP string COMMA operazioni RPAREN LBRACE elenchi RBRACE

    LPAREN  shift e prosecuzione allo stato 69


Stato 50

   15 operazioni: PRINT . LPAREN string RPAREN
   16           | PRINT .

    LPAREN  shift e prosecuzione allo stato 70

    $default  riduzione con la regola 16 (operazioni)


Stato 51

    9 operazioni: string . ASSIGN string OPERATORE string
   10           | string . ASSIGN string OPERATORE term
   11           | string . ASSIGN term OPERATORE string
   12           | string . ASSIGN term OPERATORE term
   39 cambiostato: string . CHANGESTATE string SEMI

    ASSIGN       shift e prosecuzione allo stato 71
    CHANGESTATE  shift e prosecuzione allo stato 72


Stato 52

   32 elenco_operazioni: operazioni . SEMI

    SEMI  shift e prosecuzione allo stato 73


Stato 53

   23 state: STATE string LBRACE actions elenchi . RBRACE
   30 elenchi: elenchi . elenco_cambio
   31        | elenchi . elenco_operazioni

    ALPHA        shift e prosecuzione allo stato 15
    RBRACE       shift e prosecuzione allo stato 74
    CHANGESTATE  shift e prosecuzione allo stato 43
    OPERATORE    shift e prosecuzione allo stato 47
    PRINT        shift e prosecuzione allo stato 50

    string             prosecuzione allo stato 51
    operazioni         prosecuzione allo stato 52
    elenco_operazioni  prosecuzione allo stato 75
    cambiostato        prosecuzione allo stato 55
    elenco_cambio      prosecuzione allo stato 76


Stato 54

   28 elenchi: elenco_operazioni .
   33 elenco_operazioni: elenco_operazioni . SEMI operazioni

    SEMI  shift e prosecuzione allo stato 77

    $default  riduzione con la regola 28 (elenchi)


Stato 55

   41 elenco_cambio: cambiostato .

    $default  riduzione con la regola 41 (elenco_cambio)


Stato 56

   29 elenchi: elenco_cambio .
   42 elenco_cambio: elenco_cambio . cambiostato

    ALPHA        shift e prosecuzione allo stato 15
    CHANGESTATE  shift e prosecuzione allo stato 43

    ALPHA        [riduzione con la regola 29 (elenchi)]
    CHANGESTATE  [riduzione con la regola 29 (elenchi)]
    $default     riduzione con la regola 29 (elenchi)

    string       prosecuzione allo stato 78
    cambiostato  prosecuzione allo stato 79


Stato 57

   25 state: STATE string LBRACE actions cicli . RBRACE
   26      | STATE string LBRACE actions cicli . elenco_cond RBRACE
   27      | STATE string LBRACE actions cicli . elenchi RBRACE

    ALPHA        shift e prosecuzione allo stato 15
    RBRACE       shift e prosecuzione allo stato 80
    CHANGESTATE  shift e prosecuzione allo stato 43
    IF           shift e prosecuzione allo stato 44
    ELSE         shift e prosecuzione allo stato 45
    ELIF         shift e prosecuzione allo stato 46
    OPERATORE    shift e prosecuzione allo stato 47
    PRINT        shift e prosecuzione allo stato 50
